修复电影接口问题

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,target-densitydpi=high-dpi,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="screen-orientation" content="portrait">
     <meta name="x5-orientation" content="portrait">
+    <meta name="referrer" content="never">
     <title>蒜瓣-聪白</title>
   </head>
   <body>
